Fix tablet landscape menu overlapping by increasing mobile breakpoint to 1300px

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -173,7 +173,7 @@
   }
 }
 
-@media (max-width: 1180px) {
+@media (max-width: 1300px) {
   .footer {
     padding-bottom: 70px;
   }
